# files-service

./: .gitignore  README.md  alembic.ini  hello.py  pyproject.toml
src/: constants.py  env.py  main.py  utils.py
src/alembic/: env.py
src/alembic/versions/: 333d77eff88b_.py  4840a2136995_.py  df338f0cef66_.py
src/database/: schema.py  session.py  utils.py
