[project]
name = "files-service"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.2",
    "fastapi[standard]>=0.114.2",
    "psycopg[binary,pool]>=3.2.2",
    "pydantic-settings>=2.5.2",
    "ruff>=0.6.5",
    "sqlalchemy>=2.0.34",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.pyright]
pythonVersion = "3.11"
venvPath = ".venv"
venv = "."
